--- a/team_qwe/src/main/resources/templates/addStock.html
+++ b/team_qwe/src/main/resources/templates/addStock.html
@@ -4,46 +4,91 @@
     <meta charset="UTF-8">
     <title>QWE Trading Application</title>
 </head>
+<style type="text/css">
+        body {
+              background-color: #8E8F92;
+              margin-left: 20%;
+              margin-right: 20%;
+              text-align: center;
+              border: 2px dotted black;
+              padding: 20px 20px 20px 20px;
+              font-family: sans-serif;
+        }
+        submit {
+<!--              border: none;-->
+              color: black;
+              padding: 15px 32px;
+              text-align: center;
+              text-decoration: none;
+              display: inline-block;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer;
+        }
+</style>
 <body>
 
-    <h3>Add book to list</h3>
+<h3>Add new stock</h3>
 
-    <table>
+<table cellpadding="5">
+    <form action="/addStock" th:object="${request}" method="post">
         <tr>
             <td>Ticker:</td>
-            <td>Company name:</td>
-            <td>Industry:</td>
-            <td>Currency:</td>
-            <td>Market price:</td>
-            <td>Dividend:</td>
-            <td>Risk weight:</td>
+            <td><input type="text" th:field="${request.ticker}"/></td>
         </tr>
-
         <tr>
-            <form action="/addStock" th:object="${request}" method="post">
-                <td><input type="text" th:field="${request.ticker}"/></td>
-                <td><input type="text" th:field="${request.name}"/></td>
-                <td><input type="text" th:field="${request.industry}"/></td>
-                <td><input type="text" th:field="${request.currency}"/></td>
-                <td><input type="text" th:field="${request.marketPrice}"/></td>
-                <td><input type="text" th:field="${request.dividends}"/></td>
-                <td><input type="text" th:field="${request.riskWeight}"/></td>
-                <td>
-                    <input type="submit" value="Add stock"/>
-                    <input type="reset" value="Clear"/>
-                </td>
-            </form>
+            <td>Company name:</td>
+            <td><input type="text" th:field="${request.name}"/></td>
         </tr>
-    </table>
-
-    <td th:if="${errors != null}">
-        <tr th:each="error : ${errors}">
-            <td th:text="${error.field}"></td>
-            <td th:text="${error.message}"></td>
+        <tr>
+            <td>Industry:</td>
+            <td><select name="industry">
+                <option value="Consumer Staples">Consumer Staples</option>
+                <option value="Utilities">Utilities</option>
+                <option value="Communications">Communications</option>
+                <option value="Health Care">Health Care</option>
+                <option value="Technology">Technology</option>
+                <option value="Materials">Materials</option>
+                <option value="Energy">Energy</option>
+                <option value="Financials">Financials</option>
+                <option value="Real Estate">Real Estate</option>
+                <option value="Industrials">Industrials</option>
+                <option value="Consumer Discretionary">Consumer Discretionary</option>
+            </select>
+            </td>
         </tr>
-    </td>
+        <tr>
+            <td>Currency:</td>
+            <td><select name="currency">
+                <option value="USD">USD</option>
+            </select>
+            </td>
+        </tr>
+        <tr>
+            <td>Market price:</td>
+            <td><input type="text" th:field="${request.marketPrice}"/></td>
+        </tr>
+        <tr>
+            <td>Dividend:</td>
+            <td><input type="text" th:field="${request.dividends}"/></td>
+        </tr>
+        <tr>
+            <td>Risk weight:</td>
+            <td><input type="text" th:field="${request.riskWeight}"/></td>
+        </tr>
+        <td>
+            <input type="submit" value="Add stock"/>
+            <input type="reset" value="Clear"/>
+        </td>
+    </form>
+</table>
 
-
+<td th:if="${errors != null}">
+    <tr th:each="error : ${errors}">
+        <td th:text="${error.field}"></td>
+        <td th:text="${error.message}"></td>
+    </tr>
+</td>
 
 </body>
 </html>
