--- a/team_hospital/src/main/resources/templates/patient/patientActions.html
+++ b/team_hospital/src/main/resources/templates/patient/patientActions.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<h3>Patient menu</h3>
+<h3>Patient menu:</h3>
 
 <a href="/addPatientToList">Add patient to list</a> <br>
-<a href="/deleteDeleteFromList">Delete patient from list</a> <br>
+<a href="/deleteFromList">Delete patient from list</a> <br>
 <a href="/findPatientByID">Find patient by ID</a> <br>
 <a href="/editPatient">Edit patient</a> <br>
 <a href="/showAllPatients">Show all patients in the list</a> <br>
