qwe finance project - findSecurityByTickerOrNameService added to web; - some minor updates for other web services;

--- a/team_qwe/src/main/resources/templates/filter.html
+++ b/team_qwe/src/main/resources/templates/filter.html
@@ -45,8 +45,11 @@
                 text-align: right;
         }
 
+
 </style>
 <body>
+
+<h3 style="text-align: center;">Filter stocks by multiple parameters</h3>
 
 <form action="/filter" th:object="${request}" method="post">
 
