--- a/team_qwe/src/main/resources/templates/dataMenu.html
+++ b/team_qwe/src/main/resources/templates/dataMenu.html
@@ -36,7 +36,7 @@
     <h2><button class="/" style="width: 20%;">ADD BOND</button></h2>
     <h2><a href="/removeSecurity"><button class="/" style="width: 20%;">REMOVE SECURITY</button></a></h2>
     <h2><a href="/getAllSecurityList"><button class="/" style="width: 20%;">SHOW ALL SECURITIES</button></a></h2>
-    <h2><button class="/" style="width: 20%;">FIND SECURITY BY NAME</button></h2>
+    <h2><a href="/findSecurityByTickerOrName"><button class="/" style="width: 20%;">FIND SECURITY BY TICKER OR NAME</button></a></h2>
     <h2><a href="/filter"><button class="/" style="width: 20%;">FILTER SECURITIES(STOCKS) BY MULTIPLE PARAMETERS</button></a></h2>
     <h2><a href="../"><button class="/" style="width: 20%;">RETURN TO MAIN MENU</button></a></h2>
 
