--- a/team_qwe/src/main/resources/templates/findSecurityByTickerOrName.html
+++ b/team_qwe/src/main/resources/templates/findSecurityByTickerOrName.html
@@ -9,10 +9,20 @@
               background-color: #8E8F92;
               margin-left: 20%;
               margin-right: 20%;
-              text-align: center;
+              text-align: left;
               border: 2px dotted black;
               padding: 20px 20px 20px 20px;
               font-family: sans-serif;
+        }
+        submit {
+              color: black;
+              padding: 15px 32px;
+              text-align: center;
+              text-decoration: none;
+              display: inline-block;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer;
         }
         table {
                border-collapse: collapse;
@@ -24,7 +34,7 @@
                 border: 1px solid #ccc;
         }
         caption {
-                font-size: 110%;
+                font-size: 150%;
                 font-style: italic;
                 padding-bottom: 12px;
         }
@@ -35,13 +45,23 @@
                 text-align: right;
         }
 
+
 </style>
 <body>
 
-<h3 style="text-align: center;">Show all securities</h3>
+<h3 style="text-align: center;">Find security by ticker or name</h3>
 
+<form action="/findSecurityByTickerOrName" th:object="${request}" method="post">
+
+    <td>Enter ticker or name:</td>
+    <input type="text" th:field="${request.name}"/>
+    <input type="submit" style="font-size: 100%;" value="Find" name="Submit"/>
+
+</form>
+
+<td th:if="${security != null}">
 <table>
-    <caption>Security list</caption>
+    <caption>Security</caption>
     <tr>
         <td class="center">TICKER</td>
         <td class="center">NAME</td>
@@ -52,8 +72,8 @@
         <td class="center">RISK WEIGHT</td>
     </tr>
 
-    <td th:if="${securities != null}">
-        <tr th:each="security : ${securities}">
+    <td th:if="${security != null}">
+        <tr th:each="security : ${security}">
             <td th:text="${security.ticker}"></td>
             <td th:text="${security.name}"></td>
             <td th:text="${security.industry}"></td>
@@ -65,10 +85,22 @@
     </td>
 
 </table>
+</td>
+
+<td th:if="${errors != null}">
+    <tr th:each="error : ${errors}">
+        <td th:text="${error.field}"></td>
+        <td th:text="${error.message}"></td>
+    </tr>
+</td>
+
+<td th:if="${noResult != null}">
+        <td th:text="${noResult}"></td>
+
 
 <form action="/dataMenu" method="get">
     <br>
-    <input type="submit" style="font-size: 125%;" value="Return to Data menu" name="Submit"/>
+    <input type="submit" style="font-size: 100%;" value="Return to Data menu" name="Submit"/>
 </form>
 
 </body>
