--- a/team_qwe/src/main/resources/templates/removeSecurity.html
+++ b/team_qwe/src/main/resources/templates/removeSecurity.html
@@ -9,34 +9,36 @@
               background-color: #8E8F92;
               margin-left: 20%;
               margin-right: 20%;
-              text-align: center;
+              text-align: left;
               border: 2px dotted black;
               padding: 20px 20px 20px 20px;
               font-family: sans-serif;
         }
+
 
 </style>
 <body>
 
 <h3>Remove security</h3>
 
-<table cellpadding="5">
-    <form action="/removeSecurity" th:object="${request}" method="post">
-        <tr>
-            <td>Ticker:</td>
-            <td><input type="text" th:field="${request.ticker}"/></td>
-        </tr>
-        <td>
-            <input type="submit" value="Remove security"/>
-            <input type="reset" value="Clear"/>
-        </td>
-    </form>
-</table>
+<form action="/removeSecurity" th:object="${request}" method="post">
+    <td>Enter ticker:</td>
+    <input type="text" th:field="${request.ticker}"/>
+    <br>
+    <br>
+    <input type="submit" style="font-size: 100%;" value="Remove security" name="Submit"/>
+    <input type="reset" style="font-size: 100%;" value="Clear"/>
+</form>
 
+<br>
 <td th:if="${isRemoved == false}">
-        <td th:text="${isRemoved}"></td>
-    </tr>
-</td>
+<td th:text="${isRemoved}"></td>
+
+<form action="/dataMenu" method="get">
+    <br>
+    <br>
+    <input type="submit" style="font-size: 100%;" value="Return to Data menu" name="Submit"/>
+</form>
 
 </body>
 </html>
