--- a/team_jg_entertainment/src/main/resources/templates/index.html
+++ b/team_jg_entertainment/src/main/resources/templates/index.html
@@ -11,11 +11,10 @@
 <body>
 
 <h3>Restaurant MAIN MENU:</h3>
-
-<a href="/userMenu"><button class="/" style="width: 20%;">User MENU</button></a> <br>
-<a href="/tableMenu"><button class="/" style="width: 20%;">Table MENU</button></a> <br>
-<a href="/menuMenu"><button class="/" style="width: 20%;">Menu MENU</button></a> <br>
-<a href="/reservationMenu"><button class="/" style="width: 20%;">Reservation MENU</button></a> <br>
+<a href="/userMenu"><button class="/" style="width: 20%;">User</button></a> <br>
+<a href="/tableMenu"><button class="/" style="width: 20%;">Table</button></a> <br>
+<a href="/menuMenu"><button class="/" style="width: 20%;">Menu</button></a> <br>
+<a href="/reservationMenu"><button class="/" style="width: 20%;">Reservation</button></a> <br>
 
 </body>
 
