--- a/team_jg_entertainment/src/main/resources/templates/userMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/userMenu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Restaurant JG demo project">
@@ -13,7 +13,7 @@
 
 <h3><a href="/addUser"><button class="/" style="width: 20%;">Add User</button></a></h3>
 <h3><a href="/deleteUser"><button class="/" style="width: 20%;">Delete User</button></a></h3>
-<h3><a href="/showUser"><button class="/" style="width: 20%;">Show All Users</button></a></h3>
+<h3><a href="/showUser"><button class="/" style="width: 20%;">Show Users</button></a></h3>
 <h3><a href="/searchUser"><button class="/" style="width: 20%;">Search User</button></a></h3>
 
 </body>
