--- a/team_hospital/src/main/resources/templates/patient/patientActions.html
+++ b/team_hospital/src/main/resources/templates/patient/patientActions.html
@@ -13,7 +13,7 @@
 <h3>Patient menu:</h3>
 
 <a href="/addPatientToList">Add patient to list</a> <br>
-<a href="/deleteFromList">Delete patient from list</a> <br>
+<a href="/deletePatient">Delete patient from list</a> <br>
 <a href="/findPatientByID">Find patient by ID</a> <br>
 <a href="/editPatient">Edit patient</a> <br>
 <a href="/showAllPatients">Show all patients in the list</a> <br>
