--- a/team_hospital/src/main/resources/templates/patient/showAllPatients.html
+++ b/team_hospital/src/main/resources/templates/patient/showAllPatients.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Hospital repository demo project">
     <meta name="author" content="JavaGuru">
-    <title>Hospital Repositroy</title>
+    <title>Hospital Repository</title>
 </head>
 
 <body>
