--- a/team_jg_entertainment/src/main/resources/templates/tableMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/tableMenu.html
@@ -11,7 +11,7 @@
 
 <h3>Table menu:</h3>
 
-<h3><button class="/" style="width: 20%;">Add Table</button></h3>
+<h3><a href="/addTable"><button class="/" style="width: 20%;">Add Table</button></h3>
 <h3><button class="/" style="width: 20%;">Delete Table</button></h3>
 <h3><button class="/" style="width: 20%;">Search Table</button></h3>
 <h3><button class="/" style="width: 20%;">Show All Tables</button></h3>
