--- a/team_jg_entertainment/src/main/resources/templates/tableMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/tableMenu.html
@@ -11,12 +11,12 @@
 
 <h3>Table menu:</h3>
 
-<h3><a href="/addTable"><button class="/" style="width: 20%;">Add Table</button></h3>
-<h3><button class="/" style="width: 20%;">Delete Table</button></h3>
-<h3><button class="/" style="width: 20%;">Search Table</button></h3>
-<h3><button class="/" style="width: 20%;">Show All Tables</button></h3>
-<h3><button class="/" style="width: 20%;">Return To Main Menu</button></h3>
-<h3><button class="/" style="width: 20%;">Exit From Menu</button></h3>
+<h3><a href="/addTable"><button class="/" style="width: 20%;">Add Table</button></a></h3>
+<h3><a href="/deleteTable"><button class="/" style="width: 20%;">Delete Table</button></a></h3>
+<h3><a href="/searchTable"><button class="/" style="width: 20%;">Search Table</button></a></h3>
+<h3><a href="/showAllTables"><button class="/" style="width: 20%;">Show All Tables</button></a></h3>
+<h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
+<h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
 
 </body>
 </html>
