--- a/team_jg_entertainment/src/main/resources/templates/table/addTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/addTable.html
@@ -14,9 +14,9 @@
 
 <table>
     <tr>
-        <td>Title;:</td>
+        <td>Title of the table:</td>
         <td>Capacity:</td>
-        <td>Price:</td>
+        <td>Price per table:</td>
     </tr>
 
     <tr>
