--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -11,11 +11,11 @@
 
 <h3>Menu menu:</h3>
 
-<h3><button class="/" style="width: 20%;">Add Menu</button></h3>
-<h3><button class="/" style="width: 20%;">Delete Menu</button></h3>
-<h3><button class="/" style="width: 20%;">Show All Menus</button></h3>
-<h3><button class="/" style="width: 20%;">Return To Main Menu</button></h3>
-<h3><button class="/" style="width: 20%;">Exit From Menu</button></h3>
+<h3><a href="/addMenu"><button class="/" style="width: 20%;">Add Menu</button></a></h3>
+<h3><a href="/deleteMenu"><button class="/" style="width: 20%;">Delete Menu</button></a></h3>
+<h3><a href="/showAllMenus"><button class="/" style="width: 20%;">Show All Menus</button></a></h3>
+<h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
+<h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
 
 </body>
 
