--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -15,8 +15,8 @@
 <h3><button class="/" style="width: 20%;">Show ALL Reservation</button></h3>
 <h3><button class="/" style="width: 20%;">Delete Reservation</button></h3>
 <h3><button class="/" style="width: 20%;">Edit Reservation</button></h3>
-<h3><button class="/" style="width: 20%;">Return To Main Menu</button></h3>
-<h3><button class="/" style="width: 20%;">Exit From Menu</button></h3>
+<h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
+<h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
 
 </body>
 
