--- a/team_jg_entertainment/src/main/resources/templates/menu/deleteMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/deleteMenu.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="description" content="Restaurant JG demo project">
+    <meta name="author" content="JavaGuru">
+    <title>Restaurant JG</title>
 </head>
+
 <body>
+
+<h3>Delete menu from the list</h3>
+
+<table>
+    <tr>
+        <td>Menu ID:</td>
+    </tr>
+
+    <tr>
+        <form action="/deleteMenu" th:object="${request}" method="post">
+            <td><input type="text" th:field="${request.menuNumberToRemove}"/></td>
+            <td>
+                <input type="submit" value="Delete Menu"/>
+                <input type="reset" value="Clear"/>
+            </td>
+        </form>
+    </tr>
+</table>
+
+<td th:if="${errors != null}">
+    <tr th:each="error : ${errors}">
+        <td th:text="${error.field}"></td>
+        <td th:text="${error.description}"></td>
+    </tr>
+</td>
+
+<td th:if="${errors == null}">
+    <tr th:text="${message}"></tr>
+</td>
+
+
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit" />
+</form>
+
+<form action="/menuMenu" method="get">
+    <input type="submit" value="Table" name="Submit" />
+</form>
 
 </body>
 </html>
