--- a/team_qwe/src/main/resources/templates/findSecurityByTickerOrName.html
+++ b/team_qwe/src/main/resources/templates/findSecurityByTickerOrName.html
@@ -55,7 +55,7 @@
 
     <td>Enter ticker or name:</td>
     <input type="text" th:field="${request.name}"/>
-    <input type="submit" style="font-size: 100%;" value="Find" name="Submit"/>
+    <input type="submit" value="Find" name="Submit"/>
 
 </form>
 
