--- a/team_qwe/src/main/resources/templates/index.html
+++ b/team_qwe/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="QWE finance project">
@@ -35,7 +34,7 @@
     <h1>Main menu</h1>
 
     <h2><a href="/dataMenu"><button class="/" style="width: 15%;">DATA MENU</button></a></h2>
-    <h2><a href="/dataMenu"><button class="/" style="width: 15%;">USER MENU</button></a></h2>
+    <h2><a href="/userMenu"><button class="/" style="width: 15%;">USER MENU</button></a></h2>
 
 </body>
 </html>
