--- a/team_qwe/src/main/resources/templates/addStock.html
+++ b/team_qwe/src/main/resources/templates/addStock.html
@@ -30,7 +30,7 @@
 
 <h3>Add new stock</h3>
 
-<table cellpadding="5">
+<table>
     <form action="/addStock" th:object="${request}" method="post">
         <tr>
             <td>Ticker:</td>
