--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -11,10 +11,10 @@
 
 <h3>Reservation menu:</h3>
 
-<h3><button class="/" style="width: 20%;">Add Reservation</button></h3>
-<h3><button class="/" style="width: 20%;">Show ALL Reservation</button></h3>
-<h3><button class="/" style="width: 20%;">Delete Reservation</button></h3>
-<h3><button class="/" style="width: 20%;">Edit Reservation</button></h3>
+<h3><a href="/addReservation"><button class="/" style="width: 20%;">Add Reservation</button></a></h3>
+<h3><a href="/showReservation"><button class="/" style="width: 20%;">Show ALL Reservation</button></a></h3>
+<h3><a href="/deleteReservation"><button class="/" style="width: 20%;">Delete Reservation</button></a></h3>
+<h3><a href="/editReservation"><button class="/" style="width: 20%;">Edit Reservation</button></a></h3>
 <h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
 <h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
 
