lesson_13_spring_web homework

--- a/team_oddJobs/src/main/resources/templates/index.html
+++ b/team_oddJobs/src/main/resources/templates/index.html
@@ -15,10 +15,16 @@
 <a href="/addClient">Add Client</a> <br>
 <a href="/addSpecialist">Add Specialist</a> <br>
 <a href="/addAdvertisement">Add Advertisement</a> <br>
-<a href="/showAllSpecialists">Show all specialists in the list</a> <br>
-<a href="/showAllClients">Show all clients in the list</a> <br>
-<a href="/removeSpecialist">Remove Specialist</a> <br>
+<a href="/findClient">Find Client</a> <br>
 <a href="/findSpecialist">Find Specialist</a> <br>
+<a href="/findAdvertisement">Find Advertisement</a> <br>
+<a href="/showAllClients">Show all clients in the list</a> <br>
+<a href="/showAllSpecialists">Show all specialists in the list</a> <br>
+<a href="/showAllAdvertisements">Show all advertisements in the list</a> <br>
+<a href="/removeClient">Remove Client</a> <br>
+<a href="/removeSpecialist">Remove Specialist</a> <br>
+<a href="/removeAdvertisement">Remove Advertisement</a> <br>
+
 
 
 
