--- a/team_oddJobs/src/main/resources/templates/findClient.html
+++ b/team_oddJobs/src/main/resources/templates/findClient.html
@@ -10,24 +10,21 @@
 
 <body>
 
-<h3>Show all clients in the list</h3>
+<h3>Find client in the list</h3>
 
 <table>
     <tr>
-        <td>Id: </td>
-        <td>Name: </td>
-        <td>Surname: </td>
-        <td>Personal Code: </td>
-        <td>City: </td>
+        <td>Client Id:</td>
+        <td>Name:</td>
+        <td>Surname:</td>
+
     </tr>
 
     <td th:if="${Clients != null}">
         <tr th:each="client : ${Clients}">
-            <td th:text="${client.clientId}" />
-            <td th:text="${client.clientName}" />
-            <td th:text="${client.clientSurname}" />
-            <td th:text="${client.personalCode}" />
-            <td th:text="${client.city}" />
+            <td th:text="${clients.clientId}" />
+            <td th:text="${clients.clientName}" />
+            <td th:text="${clients.clientSurname}" />
         </tr>
     </td>
 
@@ -37,6 +34,12 @@
     <input type="submit" value="Go to main page" name="Submit" />
 </form>
 
+<td th:if="${errors != null}">
+    <tr th:each="error : ${errors}">
+        <td th:text="${error.field}" />
+        <td th:text="${error.message}" />
+    </tr>
+</td>
 </body>
 
 </html>
