--- a/team_jg_entertainment/src/main/resources/templates/user/addUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/addUser.html
@@ -49,7 +49,7 @@
 </form>
 
 <form action="/userMenu" method="get">
-    <input type="submit" value="User" name="Submit" />
+    <input type="submit" value="Return to User" name="Submit" />
 </form>
 
 </body>
