--- a/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
@@ -9,24 +9,34 @@
 </head>
 
 <body>
-<h3>Delete USER from the list</h3>
+<h3>Search user</h3>
+
 <table>
     <tr>
-        <td>ID:</td>
-        <td>Name:</td>
+        <td>User Name:</td>
+        <td>User Surname:</td>
     </tr>
 
     <tr>
-        <form action="/deleteUser" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.userId}"/></td>
+        <form action="/searchUser" th:object="${request}" method="post">
             <td><input type="text" th:field="${request.userName}"/></td>
+            <td><input type="text" th:field="${request.usersSurname}"/></td>
             <td>
-                <input type="submit" value="Delete User"/>
+                <input type="submit" value="Search User"/>
                 <input type="reset" value="Clear"/>
             </td>
         </form>
     </tr>
 </table>
+
+    <td th:if="${users != null}">
+        <tr th:each="user : ${users}">
+            <td th:text="${user.userName}"></td>
+            <td th:text="${user.usersSurname}"></td>
+            <td th:text="${user.usersId}"></td>
+            <td th:text="${user.telephoneNumber}"></td>
+        </tr>
+    </td>
 
 <td th:if="${errors != null}">
     <tr th:each="error : ${errors}">
@@ -35,17 +45,14 @@
     </tr>
 </td>
 
-<td th:if="${errors == null}">
-    <tr th:text="${message}"></tr>
-</td>
-
 <form action="/" method="get">
-    <input type="submit" value="Main menu" name="Submit" />
+    <input type="submit" value="Main menu" name="Submit"/>
 </form>
 
 <form action="/userMenu" method="get">
-    <input type="submit" value="Return to User" name="Submit" />
+    <input type="submit" value="Return to User" name="Submit"/>
 </form>
+
 </body>
 
 </html>
