--- a/team_jg_entertainment/src/main/resources/templates/userMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/userMenu.html
@@ -16,6 +16,10 @@
 <h3><a href="/showUser"><button class="/" style="width: 20%;">Show Users</button></a></h3>
 <h3><a href="/searchUser"><button class="/" style="width: 20%;">Search User</button></a></h3>
 
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit" />
+</form>
+
 </body>
 
 </html>
