--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -17,7 +17,10 @@
 <h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
 <h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
 
-</body>
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit" />
+</form>
 
+</body>
 
 </html>
