--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -18,6 +18,10 @@
 <h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
 <h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
 
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit" />
+</form>
+
 </body>
 
 </html>
