--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -13,9 +13,9 @@
 
 <h3><a href="/addMenu"><button class="/" style="width: 20%;">Add Menu</button></a></h3>
 <h3><a href="/deleteMenu"><button class="/" style="width: 20%;">Delete Menu</button></a></h3>
+<h3><a href="/searchTable"><button class="/" style="width: 20%;">Search Table</button></a></h3>
 <h3><a href="/showAllMenus"><button class="/" style="width: 20%;">Show All Menus</button></a></h3>
-<h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
-<h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
+
 
 <form action="/" method="get">
     <input type="submit" value="Main menu" name="Submit" />
