--- a/team_jg_entertainment/src/main/resources/templates/user/showUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/showUser.html
@@ -7,31 +7,64 @@
     <title>Restaurant JG</title>
 </head>
 
+<style>
+#users {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+#users td, #users th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+#users tr:nth-child(even){
+background-color: #f2f2f2;
+}
+#users tr:hover {
+background-color: #ddd;
+}
+#users th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+
 <body>
 <h3>Show User</h3>
-<tr>
-    <td>Name:</td>
-    <td>Surname:</td>
-    <td>ID:</td>
-    <td>Telephone:</td>
-</tr>
-
-
-<td th:if="${visitors != null}">
-    <tr th:each="visitor : ${visitors}">
-        <td th:text="${visitor.userName}"></td>
-        <td th:text="${visitor.surname}"></td>
-        <td th:text="${visitor.telephoneNumber}"></td>
-        <td th:text="${visitor.userId}"></td>
+<table id="users">
+    <tr>
+        <th>Name</th>
+        <th>Surname</th>
+        <th>ID</th>
+        <th>Telephone</th>
     </tr>
-</td>
+
+    <!--<tr>-->
+    <!--    <td>Name:</td>-->
+    <!--    <td>Surname:</td>-->
+    <!--    <td>ID:</td>-->
+    <!--    <td>Telephone:</td>-->
+    <!--</tr>-->
+
+    <td th:if="${visitors != null}">
+        <tr th:each="visitor : ${visitors}">
+            <td th:text="${visitor.userName}"></td>
+            <td th:text="${visitor.surname}"></td>
+            <td th:text="${visitor.telephoneNumber}"></td>
+            <td th:text="${visitor.userId}"></td>
+        </tr>
+    </td>
+</table>
 
 <form action="/" method="get">
-    <input type="submit" value="Main menu" name="Submit" />
+    <input type="submit" value="Main menu" name="Submit"/>
 </form>
 
 <form action="/userMenu" method="get">
-    <input type="submit" value="Return to User" name="Submit" />
+    <input type="submit" value="Return to User" name="Submit"/>
 </form>
 
 </body>
