--- a/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
@@ -49,7 +49,7 @@
 </form>
 
 <form action="/menuMenu" method="get">
-    <input type="submit" value="Table" name="Submit" />
+    <input type="submit" value="Return to Menu" name="Submit" />
 </form>
 
 </body>
