--- a/team_jg_entertainment/src/main/resources/templates/table/addTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/addTable.html
@@ -49,7 +49,7 @@
 </form>
 
 <form action="/tableMenu" method="get">
-    <input type="submit" value="Table" name="Submit" />
+    <input type="submit" value="Return to Table" name="Submit" />
 </form>
 
 </body>
