--- a/team_jg_entertainment/src/main/resources/templates/user/showUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/showUser.html
@@ -13,23 +13,28 @@
   border-collapse: collapse;
   width: 100%;
 }
+
 #users td, #users th {
   border: 1px solid #ddd;
   padding: 8px;
 }
+
 #users tr:nth-child(even){
 background-color: #f2f2f2;
 }
+
 #users tr:hover {
 background-color: #ddd;
 }
+
 #users th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04AA6D;
+  background-color: rgba(255,0,255,0.3);
   color: white;
 }
+
 </style>
 
 <body>
