--- a/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
@@ -38,7 +38,7 @@ background-color: #ddd;
 </style>
 
 <body>
-<h3>Show User</h3>
+<h3>Show Users</h3>
 <table id="users">
     <tr>
         <th>Name</th>
