--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -13,7 +13,7 @@
 
 <h3><a href="/addMenu"><button class="/" style="width: 20%;">Add Menu</button></a></h3>
 <h3><a href="/deleteMenu"><button class="/" style="width: 20%;">Delete Menu</button></a></h3>
-<h3><a href="/searchTable"><button class="/" style="width: 20%;">Search Table</button></a></h3>
+<h3><a href="/searchMenu"><button class="/" style="width: 20%;">Search Menu</button></a></h3>
 <h3><a href="/showAllMenus"><button class="/" style="width: 20%;">Show All Menus</button></a></h3>
 
 
