--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -7,9 +7,19 @@
     <title>Restaurant JG</title>
 </head>
 
+<style>
+body {
+  background-color: linen;
+}
+h1 {
+  color: darkblue;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+</style>
+
 <body>
 
-<h3>Reservation menu:</h3>
+<h1>Reservation menu:</h1>
 
 <h3><a href="/addReservation"><button class="/" style="width: 20%;">Add Reservation</button></a></h3>
 <h3><a href="/showReservation"><button class="/" style="width: 20%;">Show ALL Reservation</button></a></h3>
