--- a/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
@@ -8,6 +8,10 @@
 </head>
 
 <style>
+body {
+  background-color: linen;
+}
+
 #users {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
