--- a/team_jg_entertainment/src/main/resources/templates/userMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/userMenu.html
@@ -7,9 +7,20 @@
     <title>Restaurant JG</title>
 </head>
 
+<style>
+body {
+  background-color: linen;
+}
+h1 {
+  color: darkblue;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+</style>
+
 <body>
 
-<h3>User menu:</h3>
+<h1>User menu:</h1>
 
 <h3><a href="/addUser"><button class="/" style="width: 20%;">Add User</button></a></h3>
 <h3><a href="/deleteUser"><button class="/" style="width: 20%;">Delete User</button></a></h3>
