--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -7,9 +7,19 @@
     <title>Restaurant JG</title>
 </head>
 
+<style>
+body {
+  background-color: linen;
+}
+h1 {
+  color: darkblue;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+</style>
+
 <body>
 
-<h3>Menu menu:</h3>
+<h1>Menu menu:</h1>
 
 <h3><a href="/addMenu"><button class="/" style="width: 20%;">Add Menu</button></a></h3>
 <h3><a href="/deleteMenu"><button class="/" style="width: 20%;">Delete Menu</button></a></h3>
