--- a/team_jg_entertainment/src/main/resources/templates/tableMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/tableMenu.html
@@ -7,9 +7,19 @@
     <title>Restaurant JG</title>
 </head>
 
+<style>
+body {
+  background-color: linen;
+}
+h1 {
+  color: darkblue;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+</style>
+
 <body>
 
-<h3>Table menu:</h3>
+<h1>Table menu:</h1>
 
 <h3><a href="/addTable"><button class="/" style="width: 20%;">Add Table</button></a></h3>
 <h3><a href="/deleteTable"><button class="/" style="width: 20%;">Delete Table</button></a></h3>
