--- a/team_jg_entertainment/src/main/resources/templates/table/searcTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/searcTable.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<style>
+body {
+  background-color: linen;
+}
+</style>
+
 <body>
 
 </body>
