--- a/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
@@ -8,6 +8,12 @@
     <title>Restaurant JG</title>
 </head>
 
+<style>
+body {
+  background-color: linen;
+}
+</style>
+
 <body>
 <h3>Delete USER from the list</h3>
 <table>
