--- a/team_jg_entertainment/src/main/resources/templates/menu/showAllMenus.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/showAllMenus.html
@@ -11,7 +11,10 @@
 body {
   background-color: linen;
 }
-
+h2 {
+  color: MediumVioletRed;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 #menus {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -42,7 +45,7 @@ background-color: #ddd;
 </style>
 
 <body>
-<h3>Show all menus available</h3>
+<h2>Show all menus available</h2>
 <table id="menus">
     <tr>
         <th>ID </th>
