--- a/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
@@ -11,7 +11,10 @@
 body {
   background-color: linen;
 }
-
+h2 {
+  color: MediumVioletRed;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 #tables {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -42,7 +45,8 @@ background-color: #ddd;
 </style>
 
 <body>
-<h3>Show all tables</h3>
+
+<h2>Show all tables</h2>
 <table id="tables">
 <tr>
     <th>ID of the table</th>
