--- a/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
@@ -11,7 +11,10 @@
 body {
   background-color: linen;
 }
-
+h2 {
+  color: MediumVioletRed;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 #users {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -42,7 +45,7 @@ background-color: #ddd;
 </style>
 
 <body>
-<h3>Show Users</h3>
+<h2>Show Users</h2>
 <table id="users">
     <tr>
         <th>Name</th>
