--- a/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/addMenu.html
@@ -12,11 +12,15 @@
 body {
   background-color: linen;
 }
+h2 {
+  color: MediumVioletRed;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 </style>
 
 <body>
 
-<h3>Add Menu to the list</h3>
+<h2>Add Menu to the list</h2>
 
 <table>
     <tr>
