--- a/team_jg_entertainment/src/main/resources/templates/table/searcTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/searcTable.html
@@ -9,6 +9,10 @@
 body {
   background-color: linen;
 }
+h2 {
+  color: MediumVioletRed;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 </style>
 
 <body>
