--- a/team_jg_entertainment/src/main/resources/templates/tableMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/tableMenu.html
@@ -12,7 +12,7 @@ body {
   background-color: linen;
 }
 h1 {
-  color: darkblue;
+  color: RoyalBlue;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
