--- a/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
@@ -12,10 +12,14 @@
 body {
   background-color: linen;
 }
+h2 {
+  color: MediumVioletRed;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 </style>
 
 <body>
-<h3>Search user</h3>
+<h2>Search user</h2>
 
 <table>
     <tr>
