--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -21,14 +21,14 @@ h1 {
 
 <h1>Menu menu:</h1>
 
-<h3><a href="/addMenu"><button class="/" style="width: 20%;">Add Menu</button></a></h3>
-<h3><a href="/deleteMenu"><button class="/" style="width: 20%;">Delete Menu</button></a></h3>
-<h3><a href="/searchMenu"><button class="/" style="width: 20%;">Search Menu</button></a></h3>
-<h3><a href="/showAllMenus"><button class="/" style="width: 20%;">Show All Menus</button></a></h3>
+<h3><a href="/addMenu"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add Menu</button></a></h3>
+<h3><a href="/deleteMenu"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete Menu</button></a></h3>
+<h3><a href="/searchMenu"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Search Menu</button></a></h3>
+<h3><a href="/showAllMenus"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show All Menus</button></a></h3>
 
 
 <form action="/" method="get">
-    <input type="submit" value="Main menu" name="Submit" />
+    <input type="submit" style="color:Blue;text-align:center;font-size:17px;" value="Main menu" name="Submit" />
 </form>
 
 </body>
