--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -21,15 +21,13 @@ h1 {
 
 <h1>Reservation menu:</h1>
 
-<h3><a href="/addReservation"><button class="/" style="width: 20%;">Add Reservation</button></a></h3>
-<h3><a href="/showReservation"><button class="/" style="width: 20%;">Show ALL Reservation</button></a></h3>
-<h3><a href="/deleteReservation"><button class="/" style="width: 20%;">Delete Reservation</button></a></h3>
-<h3><a href="/editReservation"><button class="/" style="width: 20%;">Edit Reservation</button></a></h3>
-<h3><a href="/returnToMain"><button class="/" style="width: 20%;">Return To Main Menu</button></a></h3>
-<h3><a href="/exitMenu"><button class="/" style="width: 20%;">Exit From Menu</button></a></h3>
+<h3><a href="/addReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add Reservation</button></a></h3>
+<h3><a href="/showReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show ALL Reservation</button></a></h3>
+<h3><a href="/deleteReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete Reservation</button></a></h3>
+<h3><a href="/editReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Edit Reservation</button></a></h3>
 
 <form action="/" method="get">
-    <input type="submit" value="Main menu" name="Submit" />
+    <input type="submit" style="color:Blue;text-align:center;font-size:17px;" value="Main menu" name="Submit" />
 </form>
 
 </body>
