--- a/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
@@ -66,11 +66,13 @@ background-color: #ddd;
 </table>
 
 <form action="/" method="get">
-    <input type="submit" value="Main menu" name="Submit" />
+    <input type="submit" value="Main menu" name="Submit"
+           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
 <form action="/tableMenu" method="get">
-    <input type="submit" value="Return to tables' menu" name="Submit" />
+    <input type="submit" value="Return to tables' menu" name="Submit"
+           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
 </body>
