--- a/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
@@ -56,11 +56,13 @@ h2 {
 </td>
 
 <form action="/" method="get">
-    <input type="submit" value="Main menu" name="Submit"/>
+    <input type="submit" value="Main menu" name="Submit"
+           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
 <form action="/userMenu" method="get">
-    <input type="submit" value="Return to User" name="Submit"/>
+    <input type="submit" value="Return to User" name="Submit"
+           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
 </body>
