--- a/team_hospital/src/main/resources/templates/patient/findPatientByID.html
+++ b/team_hospital/src/main/resources/templates/patient/findPatientByID.html
@@ -14,7 +14,7 @@
 
 <table>
     <tr>
-        <td>ID:</td>
+        <td>Enter ID:</td>
     </tr>
 
     <tr>
@@ -35,12 +35,32 @@
     </tr>
 </td>
 
-<form action="/" method="get">
-    <input type="submit" value="Main menu" name="Submit" />
-</form>
+<table>
+
+<tr>
+    <td>Name:</td>
+    <td>Surname:</td>
+    <td>Personal Code:</td>
+    <td>ID:</td>
+</tr>
+
+    <td th:if="${patients != null}">
+        <tr th:each="patient : ${patients}">
+            <td th:text="${patient.name}" />
+            <td th:text="${patient.surname}" />
+            <td th:text="${patient.personalCode}" />
+            <td th:text="${patient.id}" />
+        </tr>
+    </td>
+
+</table>
 
 <form action="/patientActions" method="get">
     <input type="submit" value="Patient actions" name="Submit" />
+</form>
+
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit" />
 </form>
 
 </body>
