--- a/team_jg_entertainment/src/main/resources/templates/index.html
+++ b/team_jg_entertainment/src/main/resources/templates/index.html
@@ -21,10 +21,14 @@ h2 {
 <body>
 
 <h2>Restaurant MAIN MENU:</h2>
-<a href="/userMenu"><button class="/" style="width: 20%;">User</button></a> <br>
-<a href="/tableMenu"><button class="/" style="width: 20%;">Table</button></a> <br>
-<a href="/menuMenu"><button class="/" style="width: 20%;">Menu</button></a> <br>
-<a href="/reservationMenu"><button class="/" style="width: 20%;">Reservation</button></a> <br>
+<a href="/userMenu"><button class="/" style="color: dark;
+  text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">User</button></a> <br>
+<a href="/tableMenu"><button class="/" style="color: dark;
+  text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Table</button></a> <br>
+<a href="/menuMenu"><button class="/" style="color: dark;
+  text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Menu</button></a> <br>
+<a href="/reservationMenu"><button class="/" style="color: dark;
+  text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px darkBlue;text-align:center;font-size:17px;width:20%;">Reservation</button></a> <br>
 
 </body>
 
