--- a/team_oddJobs/src/main/resources/templates/showAllSpecialists.html
+++ b/team_oddJobs/src/main/resources/templates/showAllSpecialists.html
@@ -7,10 +7,19 @@
     <meta name="author" content="JavaGuru">
     <title>Call Board</title>
 </head>
+<style type="text/css">
 
+body {
+	background-image: url('https://bti.kiev.ua/wp-content/uploads/2015/03/services.png');
+	margin:2px;
+	background-size: 100%
+}
+
+
+</style>
 <body>
 
-<h3>Show all specialists in the list</h3>
+<h1>Show all specialists in the list</h1>
 
 <table>
     <tr>
