--- a/team_oddJobs/src/main/resources/templates/findClient.html
+++ b/team_oddJobs/src/main/resources/templates/findClient.html
@@ -7,39 +7,82 @@
     <meta name="author" content="JavaGuru">
     <title>Call Board</title>
 </head>
+<style type="text/css">
 
+body {
+	background-image: url('https://bti.kiev.ua/wp-content/uploads/2015/03/services.png');
+	margin:2px;
+	background-size: 100%
+}
+
+
+</style>
 <body>
 
-<h3>Find client in the list</h3>
+<h3>Find client</h3>
 
-<table>
-    <tr>
-        <td>Client Id:</td>
-        <td>Name:</td>
-        <td>Surname:</td>
 
-    </tr>
+    <table>
 
-    <td th:if="${Clients != null}">
-        <tr th:each="client : ${Clients}">
-            <td th:text="${clients.clientId}" />
-            <td th:text="${clients.clientName}" />
-            <td th:text="${clients.clientSurname}" />
+        <tr>
+            <td >Id</td>
+            <td >Name</td>
+            <td >Surname</td>
+
+
         </tr>
+        <tr>
+        <form action="/findClient" th:object="${request}" method="post">
+    <td><input type="text" th:field="${request.clientId}"/></td>
+    <td><input type="text" th:field="${request.clientName}"/></td>
+    <td><input type="text" th:field="${request.clientSurname}"/></td>
+    <td>
+
+    <input type="submit" value="Find client" />
+    <input type="reset" value="Clear"/>
     </td>
-
-</table>
-
-<form action="/" method="get">
-    <input type="submit" value="Go to main page" name="Submit" />
 </form>
+        </tr>
+    </table>
+<td th:if="${Clients != null}">
+    <table>
+
+        <tr>
+            <td >Id</td>
+            <td >Name</td>
+            <td >Surname</td>
+            <td >Personal code</td>
+            <td >City</td>
+
+        </tr>
+
+        <td th:if="${Clients != null}">
+            <tr th:each="client : ${Clients}">
+                <td th:text="${client.clientId}"></td>
+                <td th:text="${client.clientName}"></td>
+                <td th:text="${client.clientSurname}"></td>
+                <td th:text="${client.personalCode}"></td>
+                <td th:text="${client.city}"></td>
+
+            </tr>
+        </td>
+
+    </table>
+</td>
 
 <td th:if="${errors != null}">
     <tr th:each="error : ${errors}">
-        <td th:text="${error.field}" />
-        <td th:text="${error.message}" />
     </tr>
 </td>
-</body>
 
+<td th:if="${noResult != null}">
+<td th:text="${noResult}"></td>
+
+
+<form action="/" method="get">
+    <br>
+    <input type="submit" style="font-size: 100%;" value="Back to main page" name="Submit"/>
+</form>
+
+</body>
 </html>
