--- a/team_oddJobs/src/main/resources/templates/removeSpecialist.html
+++ b/team_oddJobs/src/main/resources/templates/removeSpecialist.html
@@ -7,7 +7,16 @@
     <meta name="author" content="JavaGuru">
     <title>Call Board</title>
 </head>
+<style type="text/css">
 
+body {
+	background-image: url('https://bti.kiev.ua/wp-content/uploads/2015/03/services.png');
+	margin:2px;
+	background-size: 100%
+}
+
+
+</style>
 <body>
 
 <h3>Remove Specialist</h3>
@@ -27,7 +36,6 @@
             <td><input type="text" th:field="${request.specialistId}"/></td>
             <td><input type="text" th:field="${request.specialistName}"/></td>
             <td><input type="text" th:field="${request.specialistSurname}"/></td>
-
 
             <td>
                 <input type="submit" value="Remove Specialist"/>
