--- a/team_oddJobs/src/main/resources/templates/showAllClients.html
+++ b/team_oddJobs/src/main/resources/templates/showAllClients.html
@@ -7,7 +7,16 @@
     <meta name="author" content="JavaGuru">
     <title>Call Board</title>
 </head>
+<style type="text/css">
 
+body {
+	background-image: url('https://bti.kiev.ua/wp-content/uploads/2015/03/services.png');
+	margin:2px;
+	background-size: 100%
+}
+
+
+</style>
 <body>
 
 <h3>Show all clients in the list</h3>
