--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -22,10 +22,10 @@ h1 {
 
 <h1>Reservation menu:</h1>
 
-<h3><a href="/addReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add Reservation</button></a></h3>
-<h3><a href="/showReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show ALL Reservation</button></a></h3>
-<h3><a href="/deleteReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete Reservation</button></a></h3>
-<h3><a href="/editReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Edit Reservation</button></a></h3>
+<h3><a href="/addReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Add new reservation</button></a></h3>
+<h3><a href="/deleteReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete reservation</button></a></h3>
+<h3><a href="/editReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Edit information to the reservation</button></a></h3>
+<h3><a href="/showAllReservations"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show a list of all reservations</button></a></h3>
 
 <form action="/" method="get">
     <input type="submit" style="color:Blue;text-align:center;font-size:17px;" value="Main menu" name="Submit" />
