--- a/team_jg_entertainment/src/main/resources/templates/reservation/addReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/addReservation.html
@@ -60,7 +60,7 @@ h2 {
 </form>
 
 <form action="/reservationMenu" method="get">
-    <input type="submit" value="Return to User" name="Submit"
+    <input type="submit" value="Return to reservation menu" name="Submit"
            style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
