--- a/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
@@ -20,18 +20,18 @@ h2 {
 
 <body>
 
-<h2>Delete menu from the list</h2>
+<h2>Delete reservation from the list</h2>
 
 <table>
     <tr>
-        <td>Menu ID:</td>
+        <td>Reservation ID:</td>
     </tr>
 
     <tr>
-        <form action="/deleteMenu" th:object="${request}" method="post">
-            <td><input type="text" th:field="${request.menuNumberToRemove}"/></td>
+        <form action="/deleteReservation" th:object="${request}" method="post">
+            <td><input type="text" th:field="${request.id}"/></td>
             <td>
-                <input type="submit" value="Delete Menu"/>
+                <input type="submit" value="Delete Reservation"/>
                 <input type="reset" value="Clear"/>
             </td>
         </form>
@@ -55,8 +55,8 @@ h2 {
            style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
-<form action="/menuMenu" method="get">
-    <input type="submit" value="Return to the actions with menus" name="Submit"
+<form action="/reservationMenu" method="get">
+    <input type="submit" value="Return to reservation menu" name="Submit"
            style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
