--- a/team_jg_entertainment/src/main/resources/templates/reservation/showAllReservations.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/showAllReservations.html
@@ -46,7 +46,7 @@ background-color: #ddd;
 
 <body>
 <h2>Show all reservations available</h2>
-<table id="reservation">
+<table id="reservations">
     <tr>
         <th>Reservation ID </th>
         <th>Reservation is made by</th>
