--- a/team_jg_entertainment/src/main/resources/templates/tableMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/tableMenu.html
@@ -8,12 +8,16 @@
 </head>
 
 <style>
-body {
-  background-color: linen;
+       body {
+          background-color: linen;
+          background-image: url('http://pauliantoine.com/wp-content/uploads/2013/03/mg_3697-2a-sexy-glass-2.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
 }
-h1 {
-  color: RoyalBlue;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+       h1 {
+          color: RoyalBlue;
+          text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 
