--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -8,12 +8,16 @@
 </head>
 
 <style>
-body {
-  background-color: linen;
+     body {
+          background-color: linen;
+          background-image: url('https://png.pngtree.com/background/20210709/original/pngtree-dessert-food-chinese-food-western-restaurant-menu-background-picture-image_906141.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
 }
-h1 {
-  color: RoyalBlue;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+     h1 {
+          color: RoyalBlue;
+          text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 
