--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -8,13 +8,16 @@
 </head>
 
 <style>
-body {
-  background-color: linen;
+      body {
+          background-color: linen;
+          background-image: url('https://wpincode.com/wp-content/uploads/2015/06/reserved1.png');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
 }
-
-h1 {
-  color: RoyalBlue;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+      h1 {
+          color: RoyalBlue;
+          text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 
